--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,11 +5,12 @@
               <br/><br/>
               <h2>Patrick Cisuaka Kabongo</h2>
               <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-                <br/>
+                <p>Possui graduação em Ciência da Computação - Bacharelado pela Universidade de Brasília (2014). 
+                    Mestre em Informática pela Universidade de Brasília (2017). 
+                    Tem experiência na área de Ciência da Computação, com ênfase em Transporte Aéreo, 
+                    atuando principalmente nos seguintes temas: Inteligência Artificial, Planejamento Multiagente, 
+                    Sistemas Multiagentes, Tomada de Decisão Colaborativa, Gestão do Trafego Aéreo, 
+                    Gestão das Operações em Solo.</p>                
               </div>
         </div>
     </section>
