--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,8 +6,8 @@
               <h2>Patrick Cisuaka Kabongo</h2>
               <br/>
                 <p>Possui graduação em Ciência da Computação - Bacharelado pela Universidade de Brasília (2014). 
-                    Mestre em Informática pela Universidade de Brasília (2017). 
-                    Tem experiência na área de Ciência da Computação, com ênfase em Transporte Aéreo, 
+                    Mestre em Informática pela Universidade de Brasília (2017).</p>  
+                <p>Tem experiência na área de Ciência da Computação, com ênfase em Transporte Aéreo, 
                     atuando principalmente nos seguintes temas: Inteligência Artificial, Planejamento Multiagente, 
                     Sistemas Multiagentes, Tomada de Decisão Colaborativa, Gestão do Trafego Aéreo, 
                     Gestão das Operações em Solo.</p>                
