--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,15 +9,15 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#about">Sobre mim</a>
+                        <a href="#about">About me</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#services">Blog</a>
+                        <a href="#services">Projects</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#contact">Contato</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
                 <p class="copyright text-muted small">{{ site.copyright }}</p>
