--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,13 +15,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">  
             	<li>
-                    <a class="page-scroll" href="#about">Sobre mim</a>
+                    <a class="page-scroll" href="#about">About me</a>
                 </li>            
                 <li>
-                    <a class="page-scroll" href="#services">Blog</a>
+                    <a class="page-scroll" href="#services">Projects</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contato</a>
+                    <a class="page-scroll" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
