--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,14 +3,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>Patrick Cisuaka Kabongo</h2>
-              <br/>
-                <p>Possui graduação em Ciência da Computação - Bacharelado pela Universidade de Brasília (2014). 
-                    Mestre em Informática pela Universidade de Brasília (2017).</p>  
-                <p>Tem experiência na área de Ciência da Computação, com ênfase em Transporte Aéreo, 
-                    atuando principalmente nos seguintes temas: Inteligência Artificial, Planejamento Multiagente, 
-                    Sistemas Multiagentes, Tomada de Decisão Colaborativa, Gestão do Trafego Aéreo, 
-                    Gestão das Operações em Solo.</p>                
+                I am a <b>Software Developper</b> with 10 years of programming experience. 
+                I have a Bachelor and a Master of Science in Computer Science from the University of Brasília (Brazil).
+               <br/><br/>
               </div>
         </div>
     </section>
