--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,9 @@
               <br/><br/>
                 I am a <b>Software Developper</b> with 10 years of programming experience. 
                 I have a Bachelor and a Master of Science in Computer Science from the University of Brasília (Brazil).
-               <br/><br/>
+               <br/><br/>                
+                I am passionate about programming and that is why I am always experimenting with new 
+                technologies and techniques. 
               </div>
         </div>
     </section>
