--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,11 +3,24 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-                I am a <b>Software Developper</b> with 10 years of programming experience. 
-                I have a Bachelor and a Master of Science in Computer Science from the University of Brasília (Brazil).
-               <br/><br/>                
+                I am a skilled Java Developer with 10 years of IT experience in design, development and implementation of Applications
+                using Java/JSE. I have a Bachelor and a Master of Science in Computer Science from the University of Brasília (Brazil).
+               <br/>                
                 I am passionate about programming and that is why I am always experimenting with new 
-                technologies and techniques. 
+                technologies and techniques.
+                <br/>                
+                I have experiences:
+                <ul>
+                    <li> in design and development of web-based applications using Java, JDBC, SQL, Servlets, JSP, JSTL, JPA and 
+                Spring(Framework, MVC, Security, Data, Spring Boot). </li>
+                    <li> in client Tecnologies such as HTML/HTML5, CSS/CSS3, JavaScript, TypeScript, JSON, Angular. </li>
+                    <li> with the ORM tool Hibernate involving Connection pooling, Mappings,Transaction Management, HQL(Hibernate Query Language).</li>
+                    <li> in implementing REST Services.</li>
+                    <li> with databases like MySQL and PostgreSQL.</li>
+                    <li> with using Tomcat, Maven, Postman, Git, Eclipse, IntelliJ, Visual Studio Code.</li>
+                </ul>           
+     
+                <br/><br/>
               </div>
         </div>
     </section>
