--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2">
               <br/>
                 I am a skilled Java Developer with 10 years of IT experience in design, development and implementation of Applications
-                using Java/JSE. I have a Bachelor and a Master of Science in Computer Science from the University of Brasília (Brazil).
+                using Java. I have a Bachelor and a Master of Science in Computer Science from the University of Brasília (Brazil).
                <br/> <br/>                
                 I am passionate about programming and that is why I am always experimenting with new 
                 technologies and techniques.
