--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
                 Spring(Framework, MVC, Security, Data, Spring Boot). </li>
                     <li> in client Tecnologies such as HTML/HTML5, CSS/CSS3, JavaScript, TypeScript, JSON, Angular. </li>
                     <li> with the ORM tool Hibernate involving Connection pooling, Mappings,Transaction Management, HQL(Hibernate Query Language).</li>
-                    <li> in implementing REST Services.</li>
+                    <li> in implementing REST API.</li>
                     <li> with databases like MySQL and PostgreSQL.</li>
                     <li> with using Tomcat, Maven, Postman, Git, Eclipse, IntelliJ, Visual Studio Code.</li>
                 </ul>           
