--- a/_includes/about.html
+++ b/_includes/about.html
@@ -21,6 +21,8 @@
                 </ul>           
      
                 <br/>
+                In my free time, besides studying Java web development and data science, I like playing football, 
+                video games and watching series on Netflix.
               </div>
         </div>
     </section>
