--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,13 +11,13 @@
                 <br/> <br/>                
                 I have experiences:
                 <ul>
-                    <li> in design and development of web-based applications using Java, JDBC, SQL, Servlets, JSP, JSTL, JPA and 
+                    <li> In design and development of web-based applications using Java, JDBC, SQL, Servlets, JSP, JSTL, JPA and 
                 Spring(Framework, MVC, Security, Data, Spring Boot). </li>
-                    <li> in client Tecnologies such as HTML/HTML5, CSS/CSS3, JavaScript, TypeScript, JSON, Angular. </li>
-                    <li> with the ORM tool Hibernate involving Connection pooling, Mappings,Transaction Management, HQL(Hibernate Query Language).</li>
-                    <li> in implementing REST API.</li>
-                    <li> with databases like MySQL and PostgreSQL.</li>
-                    <li> with using Tomcat, Maven, Postman, Git, Eclipse, IntelliJ, Visual Studio Code.</li>
+                    <li> In client Tecnologies such as HTML/HTML5, CSS/CSS3, JavaScript, TypeScript, JSON, Angular. </li>
+                    <li> With the ORM tool Hibernate involving Connection pooling, Mappings, Transaction Management, HQL(Hibernate Query Language).</li>
+                    <li> In implementing REST API.</li>
+                    <li> With databases like MySQL and PostgreSQL.</li>
+                    <li> With using Tomcat, Maven, Postman, Git, Eclipse, IntelliJ, Visual Studio Code.</li>
                 </ul>           
      
                 <br/>
