--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
 
 			<div class="row">
 				<div class="col-lg-6">
-					<h2>Mantenha contato:</h2>
+					<h2>Keep in touch:</h2>
 				</div>
 				<div class="col-lg-6">
 					<ul class="list-inline banner-social-buttons">
