--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,16 +3,16 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/>
-                I am a skilled Java Developer with 10 years of IT experience in design, development and implementation of Applications
-                using Java. I have a Bachelor and a Master of Science in Computer Science from the University of Brasília (Brazil).
+                I am a skilled Software Developer with 10 years of IT experience in design, development and implementation of Applications
+                using Java, c/C++, PHP. I have a Bachelor and a Master of Science in Computer Science from the University of Brasília (Brazil).
                <br/> <br/>                
                 I am passionate about programming and that is why I am always experimenting with new 
                 technologies and techniques.
                 <br/> <br/>                
                 I have experiences:
                 <ul>
-                    <li> In design and development of web-based applications using Java, JDBC, SQL, Servlets, JSP, JSTL, JPA and 
-                Spring(Framework, MVC, Security, Data, Spring Boot). </li>
+                    <li> In design and development of web-based applications using Java, C/C++, PHP, JDBC, SQL, Servlets, JSP, JSTL, JPA and 
+                Spring(Framework, MVC, Security, Data, Spring Boot), Laravel. </li>
                     <li> In client Tecnologies such as HTML/HTML5, CSS/CSS3, JavaScript, TypeScript, JSON, Angular. </li>
                     <li> With the ORM tool Hibernate involving Connection pooling, Mappings, Transaction Management, HQL(Hibernate Query Language).</li>
                     <li> In implementing REST API.</li>
@@ -21,9 +21,12 @@
                 </ul>           
      
                 <br/>
-                In my free time, besides studying Java web development and data science, I like playing football, 
-                video games and watching series on Netflix.
-                <br/>
+                In my free time, besides studying Java web development and data science, I like to solve problems on the codesignal website,
+                and play football and video games.
+                <br/>         
+                
+                Below, some projects that I am developing.
+                <br>
               </div>
         </div>
     </section>
