--- a/_includes/about.html
+++ b/_includes/about.html
@@ -21,7 +21,7 @@
                 </ul>           
      
                 <br/>
-                In my free time, besides studying Java web development and data science, I like to solve problems on the [codesignal website](https://app.codesignal.com/profile/patrick_k15),
+                In my free time, besides studying Java web development and data science, I like to solve problems on the <a href="https://app.codesignal.com/profile/patrick_k15">codesignal website</a>,
                 and play football and video games.
                 <br/> <br/>        
                 
