--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li> In design and development of web-based applications using Java, C/C++, PHP, JDBC, SQL, Servlets, JSP, JSTL, JPA and 
                 Spring(Framework, MVC, Security, Data, Spring Boot), Laravel. </li>
-                    <li> In client Tecnologies such as HTML/HTML5, CSS/CSS3, JavaScript, TypeScript, JSON, Angular. </li>
+                    <li> In client Tecnologies such as HTML/HTML5, CSS/CSS3, JavaScript, TypeScript, Thymeleaf, JSON, Angular. </li>
                     <li> With the ORM tool Hibernate involving Connection pooling, Mappings, Transaction Management, HQL(Hibernate Query Language).</li>
                     <li> In implementing REST API.</li>
                     <li> With databases like MySQL and PostgreSQL.</li>
