--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
                 Spring(Framework, MVC, Security, Data, Spring Boot), Laravel. </li>
                     <li> In client Tecnologies such as HTML/HTML5, CSS/CSS3, JavaScript, TypeScript, Thymeleaf, JSON, Angular. </li>
                     <li> With the ORM tool Hibernate involving Connection pooling, Mappings, Transaction Management, HQL(Hibernate Query Language).</li>
-                    <li> In implementing REST API.</li>
+                    <li> In implementing REST API, HTTP API.</li>
                     <li> With databases like MySQL and PostgreSQL.</li>
                     <li> With using Tomcat, Maven, Postman, Git, Eclipse, IntelliJ, Visual Studio Code.</li>
                 </ul>           
