--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
                     <li> With the ORM tool Hibernate involving Connection pooling, Mappings, Transaction Management, HQL(Hibernate Query Language).</li>
                     <li> In implementing REST API, HTTP API.</li>
                     <li> With databases like MySQL and PostgreSQL.</li>
-                    <li> With using Tomcat, Maven, Postman, Git, Eclipse, IntelliJ, Visual Studio Code.</li>
+                    <li> With using Tomcat, Maven, Postman, Git, Eclipse, IntelliJ, Visual Studio Code, Docker, Swarm and Kubernetes.</li>
                 </ul>           
      
                 <br/>
