--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,20 +4,20 @@
             <div class="col-lg-8 col-lg-offset-2">
               <br/>
                 I am a skilled Software Developer with 10 years of IT experience in design, development and implementation of Applications
-                using Java, C/C++, PHP. I have a Bachelor and a Master of Science in Computer Science from the University of Brasília (Brazil).
+                using Java and C/C++. I have a Bachelor and a Master of Science in Computer Science from the University of Brasília (Brazil).
                <br/> <br/>                
                 I am passionate about programming and that is why I am always experimenting with new 
                 technologies and techniques.
                 <br/> <br/>                
                 I have experiences:
                 <ul>
-                    <li> In design and development of web-based applications using Java, C/C++, PHP, JDBC, SQL, Servlets, JSP, JSTL, JPA and 
-                Spring(Framework, MVC, Security, Data, Spring Boot), Laravel. </li>
-                    <li> In client Tecnologies such as HTML/HTML5, CSS/CSS3, JavaScript, TypeScript, Thymeleaf, JSON, Angular. </li>
+                    <li> In design and development of web-based applications using Java, JDBC, SQL, Servlets, JSP, JSTL, JPA,
+                    Spring Framework, Spring Boot and Quarkus. </li>
+                    <li> In client Tecnologies such as HTML/HTML5, CSS/CSS3, Bootstrap, JavaScript, TypeScript, Thymeleaf, JSON, Angular. </li>
                     <li> With the ORM tool Hibernate involving Connection pooling, Mappings, Transaction Management, HQL(Hibernate Query Language).</li>
                     <li> In implementing REST API, HTTP API.</li>
-                    <li> With databases like MySQL and PostgreSQL.</li>
-                    <li> With using Tomcat, Maven, Postman, Git, Eclipse, IntelliJ, Visual Studio Code, Docker, Swarm and Kubernetes.</li>
+                    <li> With databases like MySQL, PostgreSQL and Oracle.</li>
+                    <li> With using Tomcat, Maven, Postman, Junit 5, Rest-assured, Git, Eclipse, IntelliJ, Visual Studio Code, Docker and Kubernetes.</li>
                 </ul>           
      
                 <br/>
